force-app/main/default/objects/NavFlowChildScreen__mdt/NavFlowChildScreen__mdt.object-meta.xml
<CustomObject>
    <description>Contains Navigation flow child screens</description>
    <label>Navigation Flow Child Screen</label>
    <pluralLabel>Navigation Flow Child Screens</pluralLabel>
</CustomObject>