force-app/main/default/objects/NavFlowChildScreen__mdt/fields/FlowName__c.field-meta.xml
<CustomField>
    <fullName>FlowName__c</fullName>
    <label>Flow Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>