force-app/main/default/objects/NavFlowChildScreen__mdt/fields/PageName__c.field-meta.xml
<CustomField>
    <fullName>PageName__c</fullName>
    <description>Contains the page name of Child Screen</description>
    <label>Page Name</label>
    <type>TextArea</type>
</CustomField>