force-app/main/default/objects/NavFlowChildScreen__mdt/fields/ParentScreen__c.field-meta.xml
<CustomField>
    <fullName>ParentScreen__c</fullName>
    <description>Contains the related parent screen</description>
    <label>Parent Screen</label>
    <referenceTo>NavFlowPageConfig__mdt</referenceTo>
    <relationshipLabel>Navigation Flow Child Screens</relationshipLabel>
    <relationshipName>Navigation_Flow_Child_Screens</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>